--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <a href="#" onclick="w3_close()" class="w3-hide-large w3-right w3-jumbo w3-padding w3-hover-grey" title="close menu">
       <i class="fa fa-remove"></i>
     </a>
-    <img src="/w3images/avatar_g2.jpg" style="width:45%;" class="w3-round"><br><br>
+    <img src="euan.png" style="width:45%;" class="w3-round"><br><br>
     <h4><b>PORTFOLIO</b></h4>
     <p class="w3-text-grey">Template by W3.CSS</p>
   </div>
