--- a/index.html
+++ b/index.html
@@ -61,21 +61,21 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- First Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="Assignment Logo.png" alt="Norway" style="width:80%" class="w3-hover-opacity">
+      <img src="Assignment Logo.png" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Assignment 1</b></p>
         <p> This is my Assignment #1 submission.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="Assignment Logo.png" alt="Norway" style="width:80%" class="w3-hover-opacity">
+      <img src="Assignment Logo.png" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Assignment 2</b></p>
         <p>This is my Assignment #2 submission.</p>
       </div>
     </div>
     <div class="w3-third w3-container">
-      <img src="Assignment Logo.png" alt="Norway" style="width:80%" class="w3-hover-opacity">
+      <img src="Assignment Logo.png" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
         <p><b>Assignment 3</b></p>
         <p>This is my Assignment #3 submission.</p>
@@ -86,24 +86,24 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- Second Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="/w3images/p1.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <img src="Assignment Logo.png" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
-        <p><b>Lorem Ipsum</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p><b>Assignment 4</b></p>
+        <p>This is my Assignment #4 submission.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="/w3images/p2.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <img src="Assignment Logo.png" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
-        <p><b>Lorem Ipsum</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p><b>Assignment 5</b></p>
+        <p>This is my Assignment #5 submission.</p>
       </div>
     </div>
     <div class="w3-third w3-container">
-      <img src="/w3images/p3.jpg" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <img src="Assignment Logo.png" alt="Norway" style="width:100%" class="w3-hover-opacity">
       <div class="w3-container w3-white">
-        <p><b>Lorem Ipsum</b></p>
-        <p>Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+        <p><b>Assignment 6</b></p>
+        <p>This is my Assignment #6 submission</p>
       </div>
     </div>
   </div>
@@ -121,6 +121,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   </div>
 
   <!-- Images of Me -->
+
+  <!-- 
   <div class="w3-row-padding w3-padding-16" id="about">
     <div class="w3-col m6">
       <img src="/w3images/avatar_g.jpg" alt="Me" style="width:100%">
@@ -129,10 +131,11 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       <img src="/w3images/me2.jpg" alt="Me" style="width:100%">
     </div>
   </div>
+  -->
 
   <div class="w3-container w3-padding-large" style="margin-bottom:32px">
     <h4><b>About Me</b></h4>
-    <p>Just me, myself and I, exploring the universe of unknownment. I have a heart of love and an interest of lorem ipsum and mauris neque quam blog. I want to share my world with you. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla. Praesent tincidunt sed tellus ut rutrum. Sed vitae justo condimentum, porta lectus vitae, ultricies congue gravida diam non fringilla.</p>
+    <p>My name is Patrick Euan M. Abalos, currently taking 3rd Year BS - Computer Science course in Ateneo de Davao University.</p>
     <hr>
     
     <h4>Technical Skills</h4>
