--- a/index.html
+++ b/index.html
@@ -138,8 +138,9 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <p>My name is Patrick Euan M. Abalos, currently taking 3rd Year BS - Computer Science course in Ateneo de Davao University.</p>
     <hr>
     
+    <!-- 
     <h4>Technical Skills</h4>
-    <!-- Progress bars / Skills -->
+    Progress bars / Skills 
     <p>Photography</p>
     <div class="w3-grey">
       <div class="w3-container w3-dark-grey w3-padding w3-center" style="width:95%">95%</div>
@@ -158,6 +159,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </button>
     </p>
     <hr>
+    -->
     
   
   <!-- Contact Section -->
