--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     </div>
     </div>
   </header>
+
+  <div class="w3-container w3-padding-large" style="margin-bottom:32px">
+    <h4><b>About Me</b></h4>
+    <p>My name is Patrick Euan M. Abalos, currently taking 3rd Year BS - Computer Science course in Ateneo de Davao University.</p>
+    <hr>
+  </div>
   
   <!-- First Photo Grid-->
   <div class="w3-row-padding">
@@ -133,10 +139,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   </div>
   -->
 
-  <div class="w3-container w3-padding-large" style="margin-bottom:32px">
-    <h4><b>About Me</b></h4>
-    <p>My name is Patrick Euan M. Abalos, currently taking 3rd Year BS - Computer Science course in Ateneo de Davao University.</p>
-    <hr>
+  
     
     <!-- 
     <h4>Technical Skills</h4>
@@ -202,7 +205,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <div class="w3-row-padding">
     <div class="w3-third">
       <h3>FOOTER</h3>
-      <p>This website serves as a gateway for my assignments and wwebsites that are developed and to be developed.</p>
+      <p>This website serves as a gateway for my assignments and websites that are developed and to be developed.</p>
       <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
     </div>
   
