--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   -->
 
   <div class="w3-container w3-padding-large" style="margin-bottom:32px">
-    <h4><b>About Me</b></h4>
+    <h4 id = "about"><b>About Me</b></h4>
     <p>My name is Patrick Euan M. Abalos, currently taking 3rd Year BS - Computer Science course in Ateneo de Davao University.</p>
     <hr>
   </div>
