--- a/pa1.2.html
+++ b/pa1.2.html
@@ -94,24 +94,31 @@ body {font-size:16px;}
   <div class="w3-container" id="designers" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>World Wide Web.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
-    <p>The best team in the world.</p>
-    <p>We are lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
-    incididunt ut labore et quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    <p>The terms ‘World Wide Web’ and ‘internet’ are often confused. The internet is the networking infrastructure
+        that connects devices together, while the World Wide Web is a way of accessing information through the medium of the internet.
+        <br>
+        <br>
+        Tim Berners-Lee first proposed the idea of a ‘web of information’ in 1989. It relied on ‘hyperlinks’ to
+        connect documents together. Written in Hypertext Markup Language (HTML), a hyperlink can point to any other
+        HTML page or file that sits on top of the internet.
+        <br>
+        <br>
+        In 1990, Berners-Lee developed Hypertext Transfer Protocol (HTTP) and designed the Universal Resource Identifier
+        (URI) system. HTTP is the language computers use to communicate HTML documents over the internet, and the URI,
+        also known as a URL, provides a unique address where the pages can be easily found.
     </p>
-    <p><b>Our designers are thoughtfully chosen</b>:</p>
+    
   </div>
 
   <!-- The Modern Internet -->
   <div class="w3-container" id="designers" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>The Modern Internet.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
-    <p>The best team in the world.</p>
-    <p>We are lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure
-    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor
-    incididunt ut labore et quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    <p>
+        The Modern internet, as we know it brings this vast world into few clicks away from our fingertips. Leisure, security,
+        services, banking, online education, even the most important comodities in our lives such as water and electricity are
+        handled and is functioning the way it is because of the internet. 
     </p>
-    <p><b>Our designers are thoughtfully chosen</b>:</p>
   </div>
 
   
