--- a/PA1/PA1.html
+++ b/PA1/PA1.html
@@ -21,10 +21,10 @@ body {font-size:16px;}
   </div>
   <div class="w3-bar-block">
     <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
-    <a href="#showcase" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">The Origins.</a> 
-    <a href="#services" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">ARPANET.</a> 
-    <a href="#designers" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">World Wide Web.</a> 
-    <a href="#packages" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">The Modern Internet.</a> 
+    <a href="#origins" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">The Origins.</a> 
+    <a href="#ARPANET" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">ARPANET.</a> 
+    <a href="#WWW" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">World Wide Web.</a> 
+    <a href="#modern" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">The Modern Internet.</a> 
     <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">More Info.</a>
   </div>
 </nav>
@@ -42,7 +42,7 @@ body {font-size:16px;}
 <div class="w3-main" style="margin-left:340px;margin-right:40px">
 
   <!-- Header -->
-  <div class="w3-container" style="margin-top:80px" id="showcase">
+  <div class="w3-container" style="margin-top:80px" id="origins">
     <h1 class="w3-jumbo"><b>The Internet</The></b></h1>
     <h1 class="w3-xxxlarge w3-text-red"><b>The Origins.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
@@ -61,7 +61,7 @@ body {font-size:16px;}
  
 
   <!-- ARPANET -->
-  <div class="w3-container" id="services" style="margin-top:75px">
+  <div class="w3-container" id="ARPANET" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>ARPANET.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
     <p> President Dwight D. Eisenhower formed the Advanced Research Projects Agency (ARPA)
@@ -91,7 +91,7 @@ body {font-size:16px;}
   </div>
   
   <!-- World Wide Web -->
-  <div class="w3-container" id="designers" style="margin-top:75px">
+  <div class="w3-container" id="WWW" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>World Wide Web.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
     <p>The terms ‘World Wide Web’ and ‘internet’ are often confused. The internet is the networking infrastructure
@@ -111,7 +111,7 @@ body {font-size:16px;}
   </div>
 
   <!-- The Modern Internet -->
-  <div class="w3-container" id="designers" style="margin-top:75px">
+  <div class="w3-container" id="modern" style="margin-top:75px">
     <h1 class="w3-xxxlarge w3-text-red"><b>The Modern Internet.</b></h1>
     <hr style="width:50px;border:5px solid red" class="w3-round">
     <p>
