--- a/PA1/PA1.html
+++ b/PA1/PA1.html
@@ -20,12 +20,12 @@ body {font-size:16px;}
     <h3 class="w3-padding-64"><b>The<br>Internet .</b></h3>
   </div>
   <div class="w3-bar-block">
-    <a href="#" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
+    <a href="https://yuhan0000.github.io/CS2240/" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">Home</a> 
     <a href="#origins" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">The Origins.</a> 
     <a href="#ARPANET" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">ARPANET.</a> 
     <a href="#WWW" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">World Wide Web.</a> 
     <a href="#modern" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">The Modern Internet.</a> 
-    <a href="#contact" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">More Info.</a>
+    <a href="https://www.britannica.com/topic/World-Wide-Web" onclick="w3_close()" class="w3-bar-item w3-button w3-hover-white">More Info.</a>
   </div>
 </nav>
 
