--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
   <!-- First Photo Grid-->
   <div class="w3-row-padding">
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="Assignment Logo.png" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <a href="PA1.html"> <img src="Assignment Logo.png" alt="Norway" style="width:100%" class="w3-hover-opacity"> </a>
       <div class="w3-container w3-white">
-        <p><b>Assignment 1</b></p>
-        <p> This is my Assignment #1 submission.</p>
+        <p><b>Performance Assesment 1</b></p>
+        <p> This is my PA1 submission.</p>
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
