--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
     <div class="w3-third w3-container w3-margin-bottom">
       <a href="PA1.html"> <img src="Assignment Logo.png" alt="Norway" style="width:100%" class="w3-hover-opacity"> </a>
       <div class="w3-container w3-white">
-        <p><b>Performance Assesment 1</b></p>
+        <p><h3>Performance Assesment 1</h3></p>
         <p> This is my PA1 submission.</p>
       </div>
     </div>
