--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </div>
     </div>
     <div class="w3-third w3-container w3-margin-bottom">
-      <img src="Assignment Logo.png" alt="Norway" style="width:100%" class="w3-hover-opacity">
+      <a href="PA2/PA2.html"><img src="Assignment Logo.png" alt="Norway" style="width:100%" class="w3-hover-opacity"> </a>
       <div class="w3-container w3-white">
-        <p><b>Assignment 2</b></p>
-        <p>This is my Assignment #2 submission.</p>
+        <p><b>Performance Assessment 2</b></p>
+        <p>This is my PA2 submission.</p>
       </div>
     </div>
     <div class="w3-third w3-container">
