--- a/PA2/PA2.html
+++ b/PA2/PA2.html
@@ -73,7 +73,7 @@
     <div class="col-sm-8">
       <h2>A Brief History of Hotwheels </h2>
       
-      <iframe allowfullscreen src = "https://youtu.be/jUU5Ivv6wp4"></iframe> 
+      <iframe width="800" height="480" src="https://www.youtube.com/embed/jUU5Ivv6wp4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <p>Some text..</p>
       <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
       <br>
