--- a/PA2/PA2.html
+++ b/PA2/PA2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>PA2 - ABALOS </title>
+  <title>PA2 - ABALOS</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
@@ -14,13 +14,13 @@
     background: #aaa;
   }
   </style>
-  <link rel="stylesheet" href="PA2style.css"> 
+  <link rel="stylesheet" href="PA2style.css">
 </head>
 <body>
 
 <div class="jumbotron text-center" style="margin-bottom:0">
-  <h1>History of Hotwheels</h1>
-  <p>1:64 scale cars that start at $1</p> 
+  <h1>HISTORY OF HOTWHEELS</h1>
+  <p>1:64 scale die cast cars for $1</p> 
 </div>
 
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
@@ -34,10 +34,10 @@
         <a class="nav-link" href="#">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">More Info</a>
+        <a class="nav-link" href="#">More Info.</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Sources</a>
+        <a class="nav-link" href="#">Source</a>
       </li>    
     </ul>
   </div>  
@@ -69,14 +69,24 @@
       <hr class="d-sm-none">
     </div>
 
-
     <div class="col-sm-8">
-      <h2>A Brief History of Hotwheels </h2>
+      <h2>A Brief history Of Hotwheels</h2>
+      <h5>Title description, Dec 7, 2017</h5>
+      <div class="youtube"> 
+        <iframe src="https://www.youtube.com/embed/uH6bP2FJ7jg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
       
-      <iframe width="800" height="480" src="https://www.youtube.com/embed/jUU5Ivv6wp4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+      <p>The video above shows a simple yet extensive of Mattel Hotwheels' history that started in 1968.</p>
       <br>
+
+      <div class="pic1">
+          <img  src="https://cdn.aarp.net/content/dam/aarp/home-and-family/personal-technology/2018/02/1140-sweet-16-group.jpg">
+      </div>
+
+      <p>The first release of Mattel Hotwheels are as shown on the image above, better known as the "Sweet Sixteen". With the distinct look over their rival Matchbox, Hotwheels
+          offered more vibrant colors and realistic and funky car designs which successfully enticed the youth back then. 
+      </p>
+
       <h2>TITLE HEADING</h2>
       <h5>Title description, Sep 2, 2017</h5>
       <div class="fakeimg">Fake Image</div>
