--- a/PA2/PA2.html
+++ b/PA2/PA2.html
@@ -80,7 +80,7 @@
       <br>
 
       <div class="pic1">
-          <img  src="https://cdn.aarp.net/content/dam/aarp/home-and-family/personal-technology/2018/02/1140-sweet-16-group.jpg">
+          <img width="720" height="400" src="https://cdn.aarp.net/content/dam/aarp/home-and-family/personal-technology/2018/02/1140-sweet-16-group.jpg">
       </div>
 
       <p>The first release of Mattel Hotwheels are as shown on the image above, better known as the "Sweet Sixteen". With the distinct look over their rival Matchbox, Hotwheels
