--- a/PA2/PA2.html
+++ b/PA2/PA2.html
@@ -86,12 +86,29 @@
       <p>The first release of Mattel Hotwheels are as shown on the image above, better known as the "Sweet Sixteen". With the distinct look over their rival Matchbox, Hotwheels
           offered more vibrant colors and realistic and funky car designs which successfully enticed the youth back then. 
       </p>
+      <br>
+      <br>
 
-      <h2>TITLE HEADING</h2>
-      <h5>Title description, Sep 2, 2017</h5>
-      <div class="fakeimg">Fake Image</div>
-      <p>Some text..</p>
-      <p>Sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco.</p>
+      <img width="720" height="350" src="https://www.hotwheelsmedia.com/files/admin/uploads/5_images/original16/1968_mustang_side.jpg">
+      <p> For the first 10 years of production of the 1:64 scale cars, all its wheels have the distinct "redline" shown above. This was then used as a signifier
+          that the hot wheels you might have right now is an old-first-gen castings. Values have been sckyrocketing since. At the time being, the wheels design and performance was
+          unrivalled, having a wider and smooth base made the cars roll faster on the orange tracks. <br><br>After the 10th year of production Mattel has decided
+          to discontinue the "Redline" wheels and create a new, better, faster, sturdier wheel.
+      </p>
+      <br>
+      <br>
+
+      <h2>The TREASURE HUNTS</h2>
+      <h5>"premiums on a basics"</h5>
+      <div class="treasures">
+          <img width="720" height="400" src="https://diecastmotorsports.files.wordpress.com/2018/01/2018-treasure-hunts-rev011018.png">
+      </div>
+    
+      <p>Sunt in culpa qui officia deserunt do eiusmod tempor incididunt ut labore et dolore veniam, quis nostrud exercitation ullamco.</p>
+
+
+
+
     </div>
   </div>
 </div>
