--- a/PA2/PA2.html
+++ b/PA2/PA2.html
@@ -101,10 +101,21 @@
       <h2>The TREASURE HUNTS</h2>
       <h5>"premiums on a basics"</h5>
       <div class="treasures">
-          <img width="720" height="400" src="https://diecastmotorsports.files.wordpress.com/2018/01/2018-treasure-hunts-rev011018.png">
+          <img  src="https://diecastmotorsports.files.wordpress.com/2018/01/2018-treasure-hunts-rev011018.png">
       </div>
     
-      <p>Sunt in culpa qui officia deserunt do eiusmod tempor incididunt ut labore et dolore veniam, quis nostrud exercitation ullamco.</p>
+      <p>Every year Mattel produces about 519 million diecast cars, to add some spice in the market, they decided to insert approx. 10,000 premium cars inside the basic packaging. 
+          Finding a treasure hunt is a rare occurence, and if you do so, consider yourself bery lucky. 
+      </p>
+      <br>
+
+      <img class="pic3"  src="https://2.bp.blogspot.com/-yOmUEbTD7nU/WFhmVASBFOI/AAAAAAAAD44/w_cUt-3PMUAYS6k-56E6fKpb0vnrZQnOACLcB/s1600/BatchF0001.jpg"> 
+      <p> Left- Treasure Hunt, Right- Basic Line.
+          <br>
+          <br>
+          The Main Difference between the TH and Basic is the paint quality and the micro details of the casting, as well as the wheels are now rubber and the whole casting is
+          made out of full metal (Basic Lines are metal but with plastic bottoms and plastic wheels).
+      </p>
 
 
 
