--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
       </div>
     </div>
     <div class="w3-third w3-container">
-      <a href="PA3new/index.html">Assignment Logo.png" alt="Norway" style="width:100%" class="w3-hover-opacity"></a>
+      <a href="PA3new/index.html"><img src="Assignment Logo.png" alt="Norway" style="width:100%" class="w3-hover-opacity"></a>
       <div class="w3-container w3-white">
         <p><b>Performance Assessment 3</b></p>
         <p>This is my Assignment #3 submission.</p>
